CONCLUSÃO DE CLASSES CSS RELACIONADAS A CARTAS

--- a/css/app.css
+++ b/css/app.css
@@ -5,7 +5,7 @@ html {
 *,
 *::before,
 *::after {
-    box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 body {
@@ -24,29 +24,45 @@ body {
 
 /* ESTILIZAÇÃO DO TABULEIRO E CARTAS */
 .tabuleiro {
-    width: 660px;
-    min-height: 680px;
-    background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
-    padding: 32px;
-    border-radius: 10px;
-    box-shadow: 12px 15px 20px 0 rgba(46, 61, 73, 0.5);
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 0 3em;
+  width: 660px;
+  min-height: 680px;
+  background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
+  padding: 32px;
+  border-radius: 10px;
+  box-shadow: 12px 15px 20px 0 rgba(46, 61, 73, 0.5);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 0 3em;
 }
 
 .tabuleiro .carta {
-    height: 125px;
-    width: 125px;
-    background: #2e3d49;
-    font-size: 0;
-    color: #fff;
-    border-radius: 8px;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 5px 2px 20px rgba(46, 61, 73, 0.5);
+  height: 125px;
+  width: 125px;
+  background: #2e3d49;
+  font-size: 0;
+  color: #fff;
+  border-radius: 8px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 5px 2px 20px rgba(46, 61, 73, 0.5);
+}
+
+.tabuleiro .carta.aberta {
+  transform: rotateY(0);
+  background: #02b3e4;
+  cursor: default;
+}
+/* VER NECESSIDADE */
+.tabuleiro .carta.visualizar {
+  font-size: 33px;
+}
+
+.tabuleiro .carta.match {
+  cursor: default;
+  background: #02ccba;
+  font-size: 33px;
 }
