--- a/css/app.css
+++ b/css/app.css
@@ -66,3 +66,22 @@ body {
   background: #02ccba;
   font-size: 33px;
 }
+
+.placar {
+  text-align: left;
+  width: 345px;
+  margin-bottom: 10px;
+}
+
+.placar .estrela {
+  margin: 0;
+  padding: 0;
+  display: inline-block;
+  margin: 0 5px 0 0;
+  list-style: none;
+}
+
+.placar .reiniciar {
+  float: right;
+  cursor: pointer;
+}
