--- a/css/app.css
+++ b/css/app.css
@@ -59,12 +59,23 @@ body {
 /* VER NECESSIDADE */
 .tabuleiro .carta.visualizar {
   font-size: 33px;
+  transition: 0.6s;
+  transform: rotate(360deg);
 }
 
 .tabuleiro .carta.match {
   cursor: default;
   background: #02ccba;
   font-size: 33px;
+  transition: 0.6s;
+  transform: rotate3d(360deg);
+}
+
+.tabuleiro .carta.unmatch {
+  cursor: default;
+  background: #e83043;
+  transition: 0.6s;
+  transform: rotate(-360deg);
 }
 
 /* ESTILO REFERENTE AO PLACAR */
