--- a/css/app.css
+++ b/css/app.css
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-  background: #fffaaa;
+  background: url(../img/geometry2.png);
   font-family: 'Coda', cursive;
   margin: 0;
   padding: 0;
@@ -56,7 +56,7 @@ body {
   background: #02b3e4;
   cursor: default;
 }
-/* VER NECESSIDADE */
+
 .tabuleiro .carta.visualizar {
   font-size: 33px;
   transition: 0.6s;
@@ -93,11 +93,30 @@ body {
   list-style: none;
 }
 
-.placar .jogadas {
-
-}
-
 .placar .reiniciar {
   float: right;
   cursor: pointer;
+}
+
+/* ESTILO PARA O MODAL */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  background-color: rgb (0, 0, 0);
+  background-color: rgba (0, 0, 0, 0.4);
+}
+
+.modalContent {
+  background: #fefefe;
+  border-radius: 10px;
+  margin: 15px auto;
+  padding: 15%;
+  border: 1px solid #888;
+  width: 660px;
+  min-height: 680px;
+  text-align: center;
 }
